# Movie_airflow

./: .gitignore  Dockerfile  README.md  aws_key.pem  pyproject.toml  requirements.txt
.astro/: config.yaml
dags/: omdb.py  omdb_etl_dag.py
include/: movie.csv  transform_file.ipynb
tests/dags/: test_update_movie_data_dag.py
